# Raycaster

./: .gitignore  CMakeLists.txt  README.md  Raycaster.sln  Raycaster.vcxproj  Raycaster.vcxproj.filters  main.cpp
headers/: camera.hpp  color.hpp  entity.hpp  filesystem.hpp  intersection.hpp  line.hpp  logger.hpp  material.hpp  point.hpp  ray.hpp  raycasthit.hpp  rectangle.hpp  renderer.hpp  scene.hpp  shader.hpp  transform.hpp
include/: camera.hpp  constants.hpp  convert.hpp  environment.hpp  gl_loader.hpp  input.hpp  instance_data.hpp  line.hpp  logger.hpp  main.hpp  map.hpp  material.hpp  math.hpp  point.hpp  rect.hpp  renderer.hpp  scene.hpp  shader.hpp  window.hpp
shaders/: default.vert  line.vert  point.vert  rect.vert  view.vert
src/: camera.cpp  color.cpp  convert.cpp  environment.cpp  gl_loader.cpp  input.cpp  intersection.cpp  logger.cpp  main.cpp  map.cpp  material.cpp  math.cpp  rect.cpp  renderer.cpp  scene.cpp  shader.cpp  transform.cpp  window.cpp
src/shaders/: default.frag  default.vert  point.vert
